# blog

./: 404.html  README.md  config.toml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: pages.yml
.github_/workflows/: github_pages.yml
2023/07/16/hello-world/: index.html
2023/07/22/python-project-template/: index.html
2023/12/02/pyo3/: index.html
2023/12/02/пишем-на-rust-для-python/: index.html
2024/01/29/создаем-свой-rc-reference-counting-на-rust/: index.html
2024/02/14/custom-rc/: index.html
2024/02/14/создаем-свой-rc-reference-counting-на-rust/: index.html
archive/2023/: index.html
archive/2024/: index.html
category/free/: index.html
category/other/: index.html
category/python/: index.html
category/rust/: index.html
content/: .authors.yml  _index.en.md  _index.md  index.md
content/about/: index.en.md  index.md
content/posts/: 2022-11-04-first-post.md  2023-07-16-hello-world.md  2023-07-22-python-project-template.md  2023-07-xx-python-project-template.md  2023-08-xx-pyo3.md  2023-11-02-pyo3.md  2023-11-xx-custom-rc.md  2023-xx-xx-pyo3.md  2024-02-14-custom-rc.md  2024-02-xx-custom-rc.md  2024-xx-xx-internal-packages.md  2024-xx-xx-lalrpop.md  2024-xx-xx-logging-with-trace-id.md  2024-xx-xx-project-structure.md  2024-xx-xx-queue-reader.md  _index.en.md  post.md
overrides/partials/: comments.html
search/: search_index.json
templates/: home.html
